syntax = "proto3";

package account;

import "google/protobuf/empty.proto";


option java_package = "com.sadlier.lms.account.proto";
option java_multiple_files = true;

service ApplicationSettingService {
  rpc GetApplicationSetting (GetApplicationSettingRequest) returns(GetApplicationSettingResponse) {};
}

message GetApplicationSettingRequest {
  string key = 1 ;
}

message GetApplicationSettingResponse {
  message Data {
    string value = 1;
    string key = 2;
  }

  bool success = 8;
  oneof response{
    Data data = 1;
  }
}

message UpdateApplicationSettingRequest{
  string value =1;
  string key = 2;
}